[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
warp = "0.3"

[dev-dependencies]
cargo-bundle = "0.6.1"